--- a/views/block.jade
+++ b/views/block.jade
@@ -56,7 +56,8 @@ block contents
         td {{ block.extraData }}
       tr
         td Extra Data (Translated)
-        td {{ web3.toAscii(block.extraData) }}
+        //- td {{ web3.toAscii(block.extraData) }}
+        td {{ block.extraData }}
       tr
         td logsBloom
         td
