--- a/views/layout/default_layout.jade
+++ b/views/layout/default_layout.jade
@@ -19,6 +19,8 @@ html(lang="ko")
         web3 = new Web3(web3.currentProvider);
       } else {
         web3 = new Web3(new Web3.providers.HttpProvider("http://localhost:8545"));
+        //- web3 = new Web3(new Web3.providers.HttpProvider("https://mainnet.infura.io/v3/eef8a2c2c04848f9904d594eb9c225da"));
+
       }
       
   body
